--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,28 @@
-asgiref==3.4.1
-backports.zoneinfo==0.2.1
-Django==3.2.25
+asgiref==3.8.1
+contourpy==1.2.1
+cycler==0.12.1
+dj-database-url==2.1.0
+Django==4.1.13
+django-cors-headers==4.3.1
 djangorestframework==3.15.1
-importlib-resources==5.4.0
+djongo==1.3.6
+dnspython==2.6.1
+fonttools==4.51.0
+gunicorn==22.0.0
+kiwisolver==1.4.5
+matplotlib==3.9.0
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.2
+pillow==10.3.0
+psycopg2-binary==2.9.9
+pyarrow==15.0.0
+pylance==0.10.18
+pymongo==3.12.3
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 pytz==2024.1
-sqlparse==0.4.4
-typing-extensions==4.1.1
-zipp==3.6.0
+six==1.16.0
+sqlparse==0.2.4
+typing_extensions==4.11.0
+tzdata==2024.1
